cleaned up code and fixed bugs